Test view horizontal scroll fixed

--- a/genlab/www/resources/css/style.css
+++ b/genlab/www/resources/css/style.css
@@ -330,10 +330,6 @@ body .navbar {
     color: white;
 }
 
-#headerQuestions button{
-    color: black;
-}
-
 #logout{
     width: 100%;
     color: white;
